Change 'position' to 'fixed' on social-media icons (Try to solve problem with 100vh on mobile devices)

--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ img {
     }
 
     [data-menu-open] .menu-social-links {
-        position: absolute;
+        position: fixed;
         padding-bottom: var(--overall-padding);
         bottom: 0;
         right: 50%;
